file(GLOB_RECURSE LIBSOURCES *.cc)
add_library(libtools ${LIBSOURCES})

#Add the subdirectories to the include paths
MACRO(SUBDIRLIST result)
  FILE(GLOB children RELATIVE ${CMAKE_CURRENT_LIST_DIR} ${CMAKE_CURRENT_LIST_DIR}/*)
  SET(dirlist "")
  FOREACH(child ${children})
    IF(IS_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/${child})
      LIST(APPEND dirlist ${child})
    ENDIF()
  ENDFOREACH()
  SET(${result} ${dirlist})
ENDMACRO()
SUBDIRLIST(SUBDIRS)

foreach(subdir ${SUBDIRS})
  target_include_directories(libtools PUBLIC ${subdir})
endforeach(subdir)

set_target_properties(libtools PROPERTIES OUTPUT_NAME tools)
set_target_properties(libtools PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
target_link_libraries(libtools ${Boost_LIBRARIES} ${LIBCRYPTO_LIBRARY} ${LIBCONFIG++_LIBRARY} ${OPENSSL_LIBRARY})
#set_target_properties(libtools PROPERTIES LINKER_LANGUAGE CXX)
#target_include_directories(libtools PUBLIC include)
#target_include_directories(libtools PUBLIC .)
